--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="example image"
+    />
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="example image"
+    title="example image"
+    />
+
   </body>
 </html>
